refactor NPC in progress

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -163,9 +163,7 @@ input:checked + .sheet-slider:before {
 /********************************************************************************************************/
 /********************************* PC & NPC SHEET SHOW & HIDE SETTINGS ***********************************/
 /********************************************************************************************************/
-.sheet-npc,
-.sheet-options_toggle[value="options"] ~ .sheet-npc, .sheet-pc,
-.sheet-options_toggle[value="options"] ~ .sheet-pc, .sheet-arms, .sheet-augs, .sheet-core, .sheet-gear, .sheet-options, .sheet-social, .sheet-magic, .sheet-matrix, .sheet-vehicle, .sheet-hide-magic, .sheet-hide-resonance, .sheet-skills-active,
+.sheet-npc, .sheet-pc, .sheet-arms, .sheet-augs, .sheet-core, .sheet-gear, .sheet-options, .sheet-social, .sheet-magic, .sheet-matrix, .sheet-vehicle, .sheet-hide-magic, .sheet-hide-resonance, .sheet-grunt, .sheet-host, .sheet-sprite, .sheet-skills-active,
 .sheet-skills-know,
 .sheet-skills-lang, .sheet-magic-spells, .sheet-magic-preps, .sheet-magic-rituals, .sheet-quality, .sheet-martial, .sheet-collapsable .sheet-desc, .sheet-collapsable .sheet-desc-lifestyle,
 .sheet-resonance,
@@ -173,10 +171,7 @@ input:checked + .sheet-slider:before {
 .sheet-textboxes,
 .sheet-optional-flag[value="0"] + .sheet-attr-header,
 .sheet-category + div,
-.sheet-category + div + div,
-.sheet-grunt,
-.sheet-host,
-.sheet-sprite {
+.sheet-category + div + div {
   display: none; }
 
 .sheet-tab-switch[value="active"] ~ .sheet-skills-active,
@@ -184,7 +179,7 @@ input:checked + .sheet-slider:before {
 .sheet-tab-switch[value="language"] ~ .sheet-skills-lang, .sheet-magic-toggle[value="spells"] ~ .sheet-magic-spells, .sheet-magic-toggle[value="preps"] ~ .sheet-magic-preps, .sheet-magic-toggle[value="rituals"] ~ .sheet-magic-rituals, .sheet-tab-switch[value="quality"] ~ .sheet-quality, .sheet-tab-switch[value="martial"] ~ .sheet-martial, .sheet-display-flag:checked ~ .sheet-collapsable .sheet-desc {
   display: inline; }
 
-.sheet-pc .sheet-tabs, div.sheet-skill-box div.sheet-row-long, .sheet-npc .sheet-tabs, .sheet-npc .sheet-attribute {
+input[name='attr_sheet_type'][value="grunt"] ~ .sheet-npc .sheet-grunt, input[name='attr_sheet_type'][value="host"] ~ .sheet-npc .sheet-host, input[name='attr_sheet_type'][value="sprite"] ~ .sheet-npc .sheet-sprite, input[name='attr_sheet_type'][value="vehicle"] ~ .sheet-npc .sheet-vehicle, .sheet-pc .sheet-tabs, div.sheet-skill-box div.sheet-row-long, .sheet-npc .sheet-tabs {
   display: inline-grid;
   grid-column-gap: 1%;
   grid-row-gap: 1%; }
@@ -196,9 +191,14 @@ input:checked + .sheet-slider:before {
 .repcontrol .repcontrol_add:after, .itemcontrol .repcontrol_del {
   font-family: "Pictos"; }
 
-.sheet-sheet_type[value="npc"] ~ .sheet-npc, .sheet-sheet_type[value="pc"] ~ .sheet-pc, .sheet-options_toggle[value="arms"] ~ .sheet-arms, .sheet-options_toggle[value="augs"] ~ .sheet-augs, .sheet-options_toggle[value="core"] ~ .sheet-core, .sheet-options_toggle[value="gear"] ~ .sheet-gear, .sheet-options_toggle[value="options"] ~ .sheet-options, .sheet-options_toggle[value="social"] ~ .sheet-social, .sheet-options_toggle[value="magic"] ~ .sheet-magic, .sheet-options_toggle[value="matrix"] ~ .sheet-matrix, .sheet-options_toggle[value="vehicle"] ~ .sheet-vehicle, .sheet-character-type[value="magic"] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-magic, .sheet-character-type[value="resonance"] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-resonance, .sheet-display-flag:checked ~ .sheet-collapsable .sheet-desc-lifestyle, .sheet-arms .sheet-display, .sheet-optional-flag:not([value="0"]) + .sheet-optional, .sheet-npc-type[value="grunt"] ~ .sheet-grunt, .sheet-sheet_type[value="grunt"] ~ .sheet-npc, .sheet-npc-type[value="host"] ~ .sheet-host, .sheet-sheet_type[value="host"] ~ .sheet-npc, .sheet-npc-type[value="sprite"] ~ .sheet-sprite, .sheet-sheet_type[value="sprite"] ~ .sheet-npc, .sheet-npc-type[value="vehicle"] ~ .sheet-vehicle, .sheet-sheet_type[value="vehicle"] ~ .sheet-npc,
+input[name='attr_sheet_type']:not([value="pc"]) ~ .sheet-npc,
+input[name='attr_sheet_type'][value="pc"] ~ .sheet-pc, .sheet-options_toggle[value="arms"] ~ .sheet-arms, .sheet-options_toggle[value="augs"] ~ .sheet-augs, .sheet-options_toggle[value="core"] ~ .sheet-core, .sheet-options_toggle[value="gear"] ~ .sheet-gear, .sheet-options_toggle[value="options"] ~ .sheet-options, .sheet-options_toggle[value="social"] ~ .sheet-social, .sheet-options_toggle[value="magic"] ~ .sheet-magic, .sheet-options_toggle[value="matrix"] ~ .sheet-matrix, .sheet-options_toggle[value="vehicle"] ~ .sheet-vehicle, .sheet-character-type[value="magic"] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-magic, .sheet-character-type[value="resonance"] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-resonance, .sheet-display-flag:checked ~ .sheet-collapsable .sheet-desc-lifestyle, .sheet-arms .sheet-display, .sheet-optional-flag:not([value="0"]) + .sheet-optional,
 .sheet-static {
   display: inline-block; }
+
+input[name='attr_stats_toggle'][value="settings"] ~ .sheet-attribute .sheet-settings,
+input[name='attr_stats_toggle'][value="settings"] ~ .sheet-body .sheet-settings {
+  display: block; }
 
 .sheet-pc .sheet-tabs input[value*="arms"] ~ button[name*="arms"], .sheet-pc .sheet-tabs input[value*="augs"] ~ button[name*="augs"], .sheet-pc .sheet-tabs input[value*="core"] ~ button[name*="core"], .sheet-pc .sheet-tabs input[value*="gear"] ~ button[name*="gear"], .sheet-pc .sheet-tabs input[value*="options"] ~ button[name*="options"], .sheet-pc .sheet-tabs input[value*="social"] ~ button[name*="social"], .sheet-pc .sheet-tabs input[value*="magic"] ~ button[name*="magic"], .sheet-pc .sheet-tabs input[value*="matrix"] ~ button[name*="matrix"], .sheet-pc .sheet-tabs input[value*="vehicle"] ~ button[name*="vehicle"] {
   background-color: #610b0d;
@@ -237,19 +237,6 @@ input:checked + .sheet-slider:before {
   text-align: right;
   line-height: 2em;
   margin-right: 5%; }
-
-/***** NPC TABS CUSTOMIZATIONS *****/
-.sheet-sheet_type[value="pc"] ~ .sheet-tabs div.sheet-tab-sheet,
-.sheet-sheet_type:not([value="pc"]) ~ .sheet-tabs div.sheet-tab-col,
-.sheet-sheet_type:not([value="pc"]) ~ .sheet-tabs .sheet-info-box {
-  display: none; }
-
-.sheet-sheet_type:not([value="pc"]) ~ .sheet-tabs {
-  background: black;
-  margin-bottom: -1.5%;
-  padding: 2%;
-  position: relative;
-  width: 720px; }
 
 /********************************************************************************************************/
 /**************************************** START OF THE PC SHEET *******************************************/
@@ -351,19 +338,17 @@ input:checked + .sheet-slider:before {
   .sheet-pc-col h3 {
     color: rgba(51, 51, 51, 0.59);
     font-size: 0.8em; }
-
-.sheet-pc-col:first-child {
-  margin-right: 1.5%;
-  width: calc(50% - 10px); }
+  .sheet-pc-col:first-child {
+    margin-right: 1.5%;
+    width: calc(50% - 10px); }
 
 .sheet-row-long {
   border-bottom: 1px solid #000; }
 
 .sheet-settings-row {
   margin-top: 5px; }
-
-.sheet-settings-row select.sheet-skill-select {
-  width: 29%; }
+  .sheet-settings-row select.sheet-skill-select {
+    width: 29%; }
 
 /***** DECORATIVE BOX THAT ADDS THE RED OUTLINE ON PC SHEET *****/
 .sheet-border-box {
@@ -1732,6 +1717,18 @@ input.sheet-skill-select {
     .sheet-npc button[type="action"] {
       font-size: 1em;
       padding-left: 0px; }
+  .sheet-npc h1, .sheet-npc h2, .sheet-npc h3, .sheet-npc h4, .sheet-npc input, .sheet-npc label {
+    color: #fff; }
+  .sheet-npc h1 {
+    font-size: 1.25em; }
+  .sheet-npc h2 {
+    font-size: 1em;
+    font-variant: small-caps;
+    text-align: center;
+    text-decoration: underline; }
+  .sheet-npc textarea, .sheet-npc select, .sheet-npc .sheet-matrix input {
+    color: #fff;
+    background-color: #555; }
   .sheet-npc .sheet-tabs {
     grid-template-columns: 2.5em 1fr 4em 1fr 4em 1fr 4em 1fr 4em;
     grid-row-gap: 10%; }
@@ -1795,17 +1792,21 @@ input.sheet-skill-select {
     width: 100%; }
     .sheet-npc .sheet-attribute input[type="number"] {
       text-align: center; }
-    .sheet-npc .sheet-attribute label[data-i18n-title='modifier'] input[type='number'] {
-      width: 65%; }
-    .sheet-npc .sheet-attribute label[data-i18n-title='modifier']:before {
-      content: "("; }
-    .sheet-npc .sheet-attribute label[data-i18n-title='modifier']:after {
-      content: ")"; }
+    .sheet-npc .sheet-attribute label {
+      text-align: center; }
+      .sheet-npc .sheet-attribute label[data-i18n-title='modifier'] input[type='number'] {
+        width: 65%; }
+      .sheet-npc .sheet-attribute label[data-i18n-title='modifier']:before {
+        content: "("; }
+      .sheet-npc .sheet-attribute label[data-i18n-title='modifier']:after {
+        content: ")"; }
     .sheet-npc .sheet-attribute h1 {
       font-weight: normal;
+      grid-row: 1;
       text-align: center; }
-    .sheet-npc .sheet-attribute button, .sheet-npc .sheet-attribute h1 {
-      grid-row: 1; }
+    .sheet-npc .sheet-attribute button {
+      grid-row: 1;
+      text-transform: capitalize; }
     .sheet-npc .sheet-attribute span {
       grid-row: 2;
       text-align: center; }
@@ -1813,103 +1814,8 @@ input.sheet-skill-select {
       grid-row: 3; }
     .sheet-npc .sheet-attribute label[data-i18n-title='modifier'] {
       grid-row: 4; }
-  .sheet-npc input[name='attr_stats_toggle'][value="settings"] ~ .sheet-attribute .sheet-settings {
-    display: block; }
-
-.sheet-npc h1,
-.sheet-npc h2,
-.sheet-npc h3,
-.sheet-npc h4,
-.sheet-npc hr,
-.sheet-npc input,
-.sheet-npc label,
-.sheet-sheet_type[value="npc"] ~ .sheet-tab-toggles button {
-  color: #fff; }
-
-.sheet-npc h3,
-.sheet-npc h4,
-.sheet-npc .sheet-repeating label {
-  text-decoration: underline; }
-
-.sheet-npc h2 {
-  line-height: 15px;
-  margin-bottom: 10px;
-  margin-top: 5px; }
-
-.sheet-npc h1 {
-  font-size: 1.25em; }
-
-.sheet-npc h2 {
-  font-size: 1em; }
-
-.sheet-npc h3,
-.sheet-npc h4,
-.sheet-npc .sheet-repeating label {
-  font-size: 1em;
-  font-variant: small-caps;
-  text-align: center; }
-
-.sheet-npc .sheet-repeating label {
-  font-size: 0.9em;
-  width: 100%; }
-
-.sheet-npc textarea,
-.sheet-npc select,
-.sheet-npc .sheet-stat-inputs input,
-.sheet-sheet_type:not([value="pc"]) ~ .sheet-tabs select,
-.sheet-npc .sheet-matrix input {
-  color: #fff;
-  background-color: #555; }
-
-.sheet-npc .sheet-repeat-section option {
-  background-color: #000; }
-
-.sheet-npc input[type="text"],
-.sheet-npc input[type="number"] {
-  margin-bottom: 5px; }
-
-.sheet-npc input[type="checkbox"].sheet-character-type {
-  margin-right: 5%;
-  opacity: 1; }
-
-.sheet-npc label {
-  font-size: 1em;
-  font-weight: normal; }
-
-.sheet-npc textarea {
-  margin-top: -35px; }
 
 /*:+:+:+: NPC STATS :+:+:+:*/
-/*:+:+:+: NPC CUSTOMIZED ROWS & COLUMNS :+:+:+:*/
-.sheet-row {
-  margin: 0px 0px 0px 0px; }
-
-.sheet-leftcol,
-.sheet-2col {
-  display: inline-block;
-  vertical-align: top; }
-
-div.sheet-grunt.sheet-2col,
-div.sheet-vehicle.sheet-2col {
-  width: calc(16% - 0px); }
-
-div.sheet-grunt.sheet-vehicle.sheet-2col {
-  margin-left: 1%;
-  margin-right: 3%;
-  width: calc(27% - 0px); }
-
-div.sheet-leftcol {
-  width: calc(50% - 0px); }
-
-div.sheet-leftcol input[type="number"] {
-  width: 10%; }
-
-div.sheet-2col input[type="number"] {
-  width: 20%; }
-
-div.sheet-grunt.sheet-vehicle.sheet-2col label {
-  width: 75%; }
-
 /*:+:+:+: NPC TOGGLES & GEAR ICONS :+:+:+:*/
 input.sheet-settings-toggle {
   width: 3em; }
@@ -1932,17 +1838,6 @@ input.sheet-settings-toggle {
   color: #FCD116; }
 
 /*:+:+:+: NPC SETTINGS & DISPLAYS :+:+:+:*/
-.sheet-npc .sheet-display,
-.sheet-npc .sheet-display .sheet-grunt,
-.sheet-npc .sheet-display .sheet-host,
-.sheet-npc .sheet-display .sheet-vehicle,
-.sheet-npc .sheet-display .sheet-sprite {
-  vertical-align: top;
-  width: calc(100% - 0px) !important; }
-
-.sheet-npc .sheet-display div:nth-of-type(1n+5) {
-  margin: 1px; }
-
 .sheet-npc .sheet-display span {
   border: 0px;
   font-size: 1em;
@@ -1983,11 +1878,10 @@ input.sheet-settings-toggle[value="settings"] ~ div.sheet-settings {
   font-size: 1em;
   height: 25px;
   width: 60%; }
-
-.sheet-npc .sheet-skill-box select:last-child {
-  margin-left: 6%;
-  text-transform: capitalize;
-  width: 14%; }
+  .sheet-npc .sheet-skill-box select:last-child {
+    margin-left: 6%;
+    text-transform: capitalize;
+    width: 14%; }
 
 .sheet-npc .sheet-sprite.sheet-skills .sheet-skill-box select {
   width: 25%; }
@@ -2318,12 +2212,6 @@ span.sheet-program-toggle {
 
 .sheet-category[value="Combat"] ~ .sheet-combat-type-hide {
   display: inline; }
-
-.sheet-npc-type[value="grunt"] ~ div.sheet-grunt.sheet-attribute,
-.sheet-npc-type[value="host"] ~ div.sheet-host.sheet-attribute,
-.sheet-npc-type[value="sprite"] ~ div.sheet-sprite.sheet-attribute,
-.sheet-npc-type[value="vehicle"] ~ div.sheet-vehicle.sheet-attribute {
-  display: inline-grid; }
 
 .sheet-magic-skill,
 .sheet-resonance-skill {
