--- a/Shadowrun5thEdition/src/pug/_mixins.pug
+++ b/Shadowrun5thEdition/src/pug/_mixins.pug
@@ -1,6 +1,8 @@
 - const coreAttributeArray = ['Body', 'Agility', 'Reaction', 'Strength', 'Willpower', 'Logic', 'Intuition', 'Charisma', 'Edge'];
 - const attributesArray = ['Body', 'Agility', 'Reaction', 'Strength', 'Willpower', 'Logic', 'Intuition', 'Charisma', 'Magic', 'Resonance'];
 - const limitObject = {'Mental':'mental_limit', 'Physical':'physical_limit', 'Social':'social_limit', 'Attack':'attack', 'Data Processing':'data_processing', 'Firewall':'firewall', 'Sleaze':'sleaze'};
+- const hostObject = {'Host Rating': ['host_rating', '5'], 'Attack': ['attack', '5'], 'Sleaze': ['sleaze', '6'], 'Data Processing': ['data_processing', '7'], 'Firewall': ['firewall', '8']};
+- const spriteObject = {'Level': ['level', '5'], 'Attack': ['attack', '5'], 'Sleaze': ['sleaze', '6'], 'Data Processing': ['data_processing', '7'], 'Firewall': ['firewall', '8']};
 
 //- DIE ROLL VARIABLES
 - const rollBeginging = '@{gm_toggle} &{template:rolls}'
@@ -42,3 +44,12 @@ mixin limitSelect(selectedDefault)
             option(data-i18n=attributeName value='@{' + val + '}' selected) #{key}
         else
             option(data-i18n=attributeName value='@{' + val + '}') #{key}
+
+//- HOST & SPRITE NPCS
+mixin hostSprite(object, attrName)
+    each val, key in object
+        - const base = '^{'+attrName+'}', rollForumla = '@{'+attrName+'}+@{'+val[0]+'}';
+        +rollButton(val[0], base, rollForumla)
+        span(name='attr_'+val[0])
+        label.settings(data-i18n-title=val[0] title=key)
+            input(name='attr_'+val[0] placeholder=val[1] title='@{'+val[0]+'}' type='number' value='')
