update images to master

--- a/Delta Green 2/deltagreen.pug
+++ b/Delta Green 2/deltagreen.pug
@@ -19,7 +19,7 @@ input.display_string(name='attr_toggles' type='hidden' value='')
 		input.whisper-toggle(name='attr_gm_toggle' type='checkbox' value='/w gm')
 		span.slider
 	// LOGO
-	img(alt='Delta Green' src='https://raw.githubusercontent.com/clevett/roll20-character-sheets/deltagreen/Delta%20Green%20by%20Arc%20Dream%20Publishing/img/deltagreenlogo.jpg')
+	img(alt='Delta Green' src='https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Delta%20Green%202/img/deltagreenlogo.jpg')
 	// CHARACTER SHEETS
 	span(data-i18n='Sheet Type') Sheet Type
 	select(name='attr_sheet_type')
